--- a/mojstil.css
+++ b/mojstil.css
@@ -37,3 +37,13 @@ h3{
     display: inline-block;
     
   }
+
+#poveznice {
+
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+}
+ 
+
+
+ 
