--- a/mojstil.css
+++ b/mojstil.css
@@ -37,5 +37,10 @@ h3{
 }
  
 
-
- 
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
